@@ -1,45 +1,46 @@
-![Universal G-Code Sender](https://raw.githubusercontent.com/winder/Universal-G-Code-Sender/master/ugs-platform/branding/src/main/nbm-branding/core/core.jar/org/netbeans/core/startup/splash.gif "UGS Splash Image")
+![Universal G-Code Sender](https://github.com/winder/Universal-G-Code-Sender/raw/master/pictures/ugs_header.png "UGS Splash Image")
 
-Universal G-Code Sender is a Java based, cross platform G-Code sender, compatible with [GRBL](https://github.com/gnea/grbl/) and [TinyG](https://github.com/synthetos/TinyG)/[g2core](https://github.com/synthetos/g2). Use this program to run a GRBL or TinyG/g2core controlled CNC machine. 
 
-Online documentation and releases: http://winder.github.io/ugs_website/<br/>
-Discussion forum: https://groups.google.com/forum/#!forum/universal-gcode-sender
+[![Last commit](https://img.shields.io/github/last-commit/winder/Universal-G-Code-Sender.svg?maxAge=1800)](https://github.com/winder/Universal-G-Code-Sender/commits/master)
+[![Build Status](https://img.shields.io/github/actions/workflow/status/winder/Universal-G-code-sender/nightly.yaml?branch=master)](https://github.com/winder/Universal-G-Code-Sender/actions/workflows/nightly.yaml)
+[![Crowdin](https://badges.crowdin.net/universalgcodesender/localized.svg)](https://translate.universalgcodesender.com/project/universalgcodesender)
+[![Downloads](https://img.shields.io/github/downloads/winder/universal-g-code-sender/total?label=downloads)](https://github.com/winder/Universal-G-Code-Sender#downloads)
+[![Releases](https://img.shields.io/github/v/release/winder/Universal-G-Code-Sender)](https://github.com/winder/Universal-G-Code-Sender/releases)
+[![Discord](https://img.shields.io/discord/1257702590137897072?label=discord%20chat)](https://discord.com/invite/4DYywtyGYK)
+
+Universal G-Code Sender is a Java based, cross platform G-Code sender, compatible with [GRBL](https://github.com/gnea/grbl/), [TinyG](https://github.com/synthetos/TinyG), [g2core](https://github.com/synthetos/g2) and [Smoothieware](http://smoothieware.org/).
+
+Webpage: https://universalgcodesender.com/ <br/>
+Discussion forum: https://github.com/winder/Universal-G-Code-Sender/discussions <br/>
+Discord chat: https://discord.com/invite/4DYywtyGYK <br/>
+Translations: https://translate.universalgcodesender.com/ <br/>
 
 Technical details:
 
 * [JSSC](https://github.com/scream3r/java-simple-serial-connector) or [JSerialComm](https://github.com/Fazecast/jSerialComm) for serial communication
 * [JogAmp](https://jogamp.org/) for OpenGL
-* Built with [Netbeans Platform](https://netbeans.org/features/platform/)
-* Developed with NetBeans 8.0.2 or later
+* [Netbeans Platform](https://netbeans.org/features/platform/)
+* [JTS](https://github.com/locationtech/jts) for geometric transformations
+* [Batik](https://xmlgraphics.apache.org/batik/) for reading SVG
 
 ## Downloads
+Below you will find the latest release of UGS.<br/> For older releases please visit the [releases page](https://github.com/winder/Universal-G-Code-Sender/releases).
 
-These are the nightly builds of the most recent code with the latest features and bug fixes. <br/>
-For stable releases visit the [downloads page](http://winder.github.io/ugs_website/download/).
+Unpack and start the program ```bin/ugsplatform```
 
-[![Last commit](https://img.shields.io/github/last-commit/winder/Universal-G-Code-Sender.svg?maxAge=1800)](https://github.com/winder/Universal-G-Code-Sender/commits/master)
-[![Build Status](https://travis-ci.org/winder/Universal-G-Code-Sender.svg?branch=master)](https://travis-ci.org/winder/Universal-G-Code-Sender)
-[![Codacy Badge](https://api.codacy.com/project/badge/Grade/2941c34531f749a2b7fbcd1737f71000)](https://www.codacy.com/app/winder/Universal-G-Code-Sender?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=winder/Universal-G-Code-Sender&amp;utm_campaign=Badge_Grade)
-[![Codebeat badge](https://codebeat.co/badges/48cc1265-2f6b-4163-8a8a-964acc073100)](https://codebeat.co/projects/github-com-winder-universal-g-code-sender-master)
 
-| Version | Description |
-|-|-|
-| [UGS Classic](http://bit.ly/2HhJIir)  | The nightly build of the classic version with a clean and lightweight user interface |
-| [UGS Platform](http://bit.ly/2L2v9k6) | The nightly build of the next generation, feature packed version based on the Netbeans Platform |
-
-## Running 
-
-Make sure you have [Java 8](https://java.com/en/download/manual.jsp) installed. 
-
-Download either **UGS Classic** or **UGS Platform** and unzip the .zip file.
-
-* For **UGS Classic** simply double click the jar file. On some platforms you may need to run the included start script.
-* For **UGS Platform** run the start script: ```bin/ugsplatform``` 
+| Latest release (v2.1.17)                                                                                                                                                       | Nightly build                                                                                                                                                                         |
+|:------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| [![Windows 64-bit](pictures/os_windows.png) Windows 64-bit](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.17/win64-ugs-platform-app-2.1.17.zip)      | [![Windows 64-bit](pictures/os_windows.png) Windows 64-bit](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/win64-ugs-platform-app-2.0-SNAPSHOT.zip)      |
+| [![Mac OSX](pictures/os_mac.png) Mac OSX](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.17/macosx-x64-ugs-platform-app-2.1.17.dmg)                   | [![Mac OSX](pictures/os_mac.png) Mac OSX](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/macosx-x64-ugs-platform-app-2.0-SNAPSHOT.dmg)                   |
+| [![Mac OSX](pictures/os_mac.png) Mac OSX ARM64](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.17/macosx-aarch64-ugs-platform-app-2.1.17.dmg)         | [![Mac OSX ARM64](pictures/os_mac.png) Mac OSX ARM64](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/macosx-aarch64-ugs-platform-app-2.0-SNAPSHOT.dmg)   | 
+| [![Linux x64](pictures/os_linux.png) Linux 64-bit](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.17/linux-x64-ugs-platform-app-2.1.17.tar.gz)        | [![Linux x64](pictures/os_linux.png) Linux 64-bit](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/linux-x64-ugs-platform-app-2.0-SNAPSHOT.tar.gz)        |
+| [![Linux ARM](pictures/os_linux_arm.png) Linux ARM](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.17/linux-arm-ugs-platform-app-2.1.17.tar.gz)       | [![Linux ARM](pictures/os_linux_arm.png) Linux ARM](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/linux-arm-ugs-platform-app-2.0-SNAPSHOT.tar.gz)       |
+| [![Linux ARM](pictures/os_linux_arm.png) Linux ARM64](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.17/linux-aarch64-ugs-platform-app-2.1.17.tar.gz) | [![Linux ARM](pictures/os_linux_arm.png) Linux ARM64](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/linux-aarch64-ugs-platform-app-2.0-SNAPSHOT.tar.gz) | 
+| [![Zip](pictures/zip.png) All platforms](https://github.com/winder/Universal-G-Code-Sender/releases/download/v2.1.17/ugs-platform-app-2.1.17.zip)                               | [![Zip](pictures/zip.png) All platforms](https://github.com/winder/Universal-G-Code-Sender/releases/download/nightly/ugs-platform-app-2.0-SNAPSHOT.zip)                               |
 
 
 ## Screenshots
-
-### UGS Platform
 
 UGS Platform main window
 
@@ -65,21 +66,18 @@ Basic gcode editor
 
 ![Basic gcode editor](https://github.com/winder/Universal-G-Code-Sender/raw/master/pictures/2.0_platform_editor.png "Basic gcode editor")
 
-### UGS Classic
+Vector graphics designer for generating GCode toolpaths
 
-UGS Classic main window
+![Designer](https://github.com/winder/Universal-G-Code-Sender/raw/master/pictures/2.0_platform_designer.png "Basic gcode editor")
 
-![Classic main window](https://winder.github.io/ugs_website/img/screenshots/finished.png)
-
-UGS Classic with visualizer
-
-![Classic visualizer](https://winder.github.io/ugs_website/img/screenshots/visualizer.png)
 
 ## Development
+<details><summary>Show details on how to compile the software</summary>
+<p>
 
-For development the [Maven](http://maven.apache.org) build tool is used.
+For development we use [Maven](http://maven.apache.org) and [Java 17](https://adoptium.net/) for compiling.
 
-#### Start the application
+#### Compiling and starting the application
 
 UGS Classic: 
 ```bash
@@ -105,119 +103,109 @@ mvn test
 
 ```bash
 mvn install
-mvn package -pl ugs-core
+mvn package -pl ugs-classic
 ```
 
 
 #### Build a UniversalGcodeSender.zip release file
 
 ```bash
-mvn package assembly:assembly
+mvn package -pl ugs-classic assembly:assembly
 ```
 
-#### Develop via Intellij
+#### Develop via IntelliJ
 
-If you are more used to Intellij, you can also build, run and debug it there:
+If you are more used to IntelliJ, you can also build, run and debug it there.
 
 - Run  `mvn nbm:run-platform -pl ugs-platform/application` once via terminal to build everything
 - Import the Source, `File` -> `New` -> `Project from existing Sources`
 - Setup a new "Run Configuration", `Java Application`, with following settings:
   - Main Class: `org.netbeans.Main`
-  - VM Options: `-Dnetbeans.user=$ProjectFileDir$/ugs-platform/application/target/userdir -Dnetbeans.home=$ProjectFileDir$/ugs-platform/application/target/ugsplatform/platform -Dnetbeans.logger.console=true -Dnetbeans.indexing.noFileRefresh=true -Dnetbeans.dirs="$ProjectFileDir$/ugs-platform/application/target/ugsplatform/ugsplatform:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/platform:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/ide:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/extra:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/java"`
+  - VM Options:
+```
+-Dpolyglot.engine.WarnInterpreterOnly=false
+-Dnetbeans.user=$ProjectFileDir$/ugs-platform/application/target/userdir
+-Dnetbeans.home=$ProjectFileDir$/ugs-platform/application/target/ugsplatform/platform
+-Dnetbeans.logger.console=true
+-Dnetbeans.indexing.noFileRefresh=true
+-Dnetbeans.moduleitem.dontverifyclassloader=true
+-Dnetbeans.dirs=$ProjectFileDir$/ugs-platform/application/target/ugsplatform/ugsplatform:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/platform:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/ide:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/extra:$ProjectFileDir$/ugs-platform/application/target/ugsplatform/java
+--add-opens=java.base/java.net=ALL-UNNAMED
+--add-opens=java.base/java.lang.ref=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.security=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=java.base/java.nio=ALL-UNNAMED
+--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED
+--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED
+--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
+--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED
+--add-opens=java.desktop/javax.swing=ALL-UNNAMED
+--add-opens=java.desktop/java.awt=ALL-UNNAMED
+--add-opens=java.desktop/java.awt.event=ALL-UNNAMED
+--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED
+--add-opens=java.desktop/javax.swing.plaf.synth=ALL-UNNAMED
+--add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED
+--add-opens=java.desktop/sun.awt.shell=ALL-UNNAMED
+--add-opens=java.desktop/sun.awt.im=ALL-UNNAMED
+--add-exports=java.desktop/sun.awt=ALL-UNNAMED
+--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED
+--add-exports=java.desktop/com.sun.beans.editors=ALL-UNNAMED
+--add-exports=java.desktop/sun.swing=ALL-UNNAMED
+--add-exports=java.desktop/sun.awt.im=ALL-UNNAMED
+--add-exports=java.desktop/com.sun.java.swing.plaf.motif=ALL-UNNAMED
+``` 
   - Program arguments: `--branding ugsplatform`
   - Working dir: `$ProjectFileDir$`
   - Use classpath of module: `ugs-platform-app` 
 - There is a [runConfiguration](.idea/runConfigurations/UGS_Platform.xml) in the repository, which should be available after importing the project
 
+</p>
+</details>
 
-## Changelog
+<details><summary>Show code documentation.</summary>
+<p>
 
-1.0.9 -> 2.0
-* Constant memory! Optimized every part of UGS to run in a fixed amount of memory, no more slowness because a file is too large.
-* 'Cancel' now issue a feed hold and soft reset to stop the machine faster.
-* Macro substitutions. Use {machine_x/y/z} {work_x/y/z} to substitute the current machine/work coordinates, {prompt|name} can be used to ask for values in a popup dialog.
-* UGS now queries GRBL for its current state and settings in order to configure itself in a more intelligent manner. (Thanks Phil!)
-* Improved gcode parser. Heavily refactored and validated with a new suite of unit tests, the gcode parser is now much more powerful than before and can be augmented customizable command processors.
-* Controllers can now be added and configured with a JSON file, see resources/firmware_config
-* Added restore default buttons on settings pages.
-* Plane selection support: G17, G18, G19
-* Setup wizard for CNC controllers
-* Improved support for TinyG / g2core
-* Improved web pendant
-* Added command line support
+### High-Level Architecture
 
-1.0.8 -> 1.0.9
-* Many performance improvements.
-* New serial library: JSSC
-* Updated 3D library.
-* Maven build script (Thanks nitram509!)
-* TinyG support enabled.
-* XLCD support.
-* Bug fixes: INCH/MM jog units, visualizer fixes (crashes and OSX support), "Null stream" error, localization crashes, 
-* Translations: French, Greek, Dutch, Italian
+1.  **Core Module (`ugs-core`)**: This is the heart of UGS. It contains:
+    * **Communication Layer**: Handles serial communication (or other protocols like TCP/IP for some controllers) with the CNC machine's firmware (e.g., GRBL). It translates G-code commands into signals the controller understands and interprets responses from the controller.
+    * **G-code Parser and Interpreter**: Processes G-code files, breaks them down into individual commands, and manages the sending sequence.
+    * **Machine State Management**: Keeps track of the machine's current position (X, Y, Z coordinates), feed rate, spindle speed, and other relevant operational parameters. This is the data that populates the "Controller State (DRO)" panel.
+    * **Toolpath Generation/Visualization Logic**: While UGS isn't primarily a CAM (Computer-Aided Manufacturing) software, it contains logic to interpret G-code and generate a visual representation of the toolpath for the user.
+    * **Settings and Configuration Management**: Handles loading and saving user preferences, machine settings, and connection parameters.
 
-1.0.7 -> 1.0.8
-* PendantUI server - connect to UGS with your smartphone or tablet. (jvabob)
-* Translations: German, Spanish, Italian, Afrikaans
-* Many bugfixes and stability improvements.
+2.  **Platform/Application Layer (`ugs-platform/application` and other modules)**: This layer builds upon the core functionality and provides the graphical user interface (GUI) and specific features.
+    * **NetBeans Platform**: UGS Platform leverages the NetBeans Platform, which provides a robust framework for building desktop applications. This means the UI is composed of "modules" or "plugins," each responsible for a specific set of functionalities (e.g., a module for the visualizer, a module for the console, a module for the DRO).
+    * **User Interface (UI) Components**: These are the visual elements the user interacts with, such as buttons, text fields, tables, and the visualizer. These components are typically Swing-based (Java's GUI toolkit) or, less commonly, JavaFX.
+    * **Event Handling**: Manages user interactions (button clicks, keyboard input, mouse movements) and translates them into calls to the core module or other platform services.
+    * **Plugin System**: The modular nature allows for easy addition of new features or customization through plugins.
 
-1.0.6 -> 1.0.7
-* Many improvements to code architecture to allow future support for multiple firmwares (TinyG, Marlin, Smoothie, etc).
-* New menu bar! Now new features can be added and existing features are more configurable.
-* Additional on-the-fly gcode command preprocessing:
-* - truncate and round long decimals to configurable length.
-* - enforce max command length.
-* - remove whitespaces.
-* - expand small arcs to G1 commands.
-* New option to save preprocessed gcode file to a file.
-* Visualizer navigation controls - pan and zoom with the mouse wheel. (michmerr)
-* Visualizer Support for radius arcs (phlatboyz sketchup plugin gcode now displays correctly)
-* New single-step mode.
-* New colored status indicator.
-* [Many bugfixes, thanks to UGS contributors](https://github.com/winder/Universal-G-Code-Sender/graphs/contributors)
+3.  **Third-Party Libraries**: UGS relies on various external libraries for tasks like:
+    * Serial communication (e.g., JSSC - Java Simple Serial Connector).
+    * 3D visualization (e.g., JOGL for OpenGL integration).
+    * Logging.
+    * JSON parsing (for settings).
 
-1.0.5 -> 1.0.6
-* 3D gcode visualizer!
-* - color coded line segments
-* - real time tool position
-* - real time gcode buffer position
-* Due to popular demand, RaspberryPi support.
-* Complete all-in-one release, 32 and 64 bit linux/windows/mac + RaspberryPi
-* Settings saved between runs (thanks lazyzero)
-* Advanced GRBL control, new buttons for GRBL 0.8c features (gcode check mode, homing, etc)
-* Major backend refactoring to make code more stable and testable.
-* Unit tests added, over 1300 lines of unit test code.
+### UI elements
 
-1.0.4 -> 1.0.5
-* Job duration estimate now displayed when running a file.
-* Real-time machine position display for GRBL v8.0c.
-* Display for most recent GcodeComment.
-* Bug fixes - no more dropped commands!
-* Overhauled the GUI to display more information.
+The user-interface elements of ugs-platform can be found in the `ugs-platform` folder. Each window in the platform-application is a Panel object. We list differnt ui elements together with their location below:
 
-1.0.3 -> 1.0.4
-* The step size spinner now goes to less than 1.
-* New buttons on the manual control page for common functions.
-* Manual X/Y coordinates can now be modified with arrow keys.
-* New start scripts added to release zip files.
-* Changed speed override to a percentage rather than absolute.
-* Bug fixes.
+- Controller State (DRO): This is the window to see the current state of the machine (connected/disconnected) and its current position. The code is located under `ugs-platform/ugs-platform-plugin-dro/src/main/java/.../panels/MachineStatusPanel.java`.
 
-1.0.2 -> 1.0.3
-* Manual jogging mode, control machine with buttons in the UI.
-* Automatically skip blank lines and comments when sending a file.
-* Bug fixes.
+- Jog Controller: This window contains buttons to jog the machine. The code is located under `ugs-platform/ugs-platform-plugin-jog/src/main/java/.../jog/JogPannel.java`. In the resources folder, you will find svg images which are displayed inside the jog buttons.
 
-1.0.1 -> 1.0.2
-* Grbl version checking.
-* Real-time pause/resume commands used for Grbl v0.8.
-* Comment filtering - parses out comments before sending commands.
-* Bug fixes.
+- Overrides pannel: `ugs-core/src/com/.../uielements/panels/OverridesPanel.java`.
 
-1.0 -> 1.0.1
-* New distribution jar - Application no longer requires RXTX to be installed!
-* Added table view for file streaming.
-* Added Pause/Resume button.
-* Usability improvements.
-* Many bug fixes.
-* Renamed package to com.willwinder.universalgcodesender.
+- language-specific text: In the folder `ugs-core/src/com/.../resources/`, you will find a lot of `.properties` files. These contain language-specific text that is shown to the user, such as label text, button text etc.
+
+### Logs
+
+Application logs, including detailed debug messages and error reports, are primarily written to the messages.log file. This file is located within the application's user directory at `ugs-platform/application/target/userdir/var/log/messages.log` when running from the build target. In the event of an unexpected application crash or erratic behavior, reviewing this log file is the first recommended step, as it often contains stack traces and error messages that can pinpoint the root cause of the problem. Additionally, for severe JVM crashes, a `hs_err_pid<PID>.log` file might be generated in the application's working directory, offering further low-level diagnostic information.
+
+</p>
+</details>
+
+
+## Supported by
+[![JetBrains logo.](https://resources.jetbrains.com/storage/products/company/brand/logos/jetbrains.svg)](https://jb.gg/OpenSourceSupport)
